syntax = "proto3";

package mathservice;

option java_multiple_files = true;
option java_package = "com.mathservice.grpc";

service MathService {
  rpc CalculateVolatility (VolatilityRequest) returns (VolatilityResponse) {}
}

message VolatilityRequest {
  repeated double returns = 1;
}

message VolatilityResponse {
  double volatility = 1;
} 